# CleverKeys-ML

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  VOCAB_SYSTEM.md  build_kenlm_model.py  create_simple_lm.py  ctc_vs_transducer.md  download_kenlm.py  export_models.py  export_simple.py  fix_dataset_case.py  gemini_fix_train.py  nemo_review.md  nemo_review_updated.md  pyproject.toml  summary.md  train.py  train_nemo1.py  train_nemo1_fixes_applied.md  train_production.py  train_sota.py  train_transducer.py  training_errors_summary.md
.github/workflows/: deploy-demo.yml
android/: VocabMetaUtils.kt
archive/: analyze_dataset.py  find_kenlm.py  main.py  sample_data.txt  train2.py  train3.py  train4.py  train_nemo1.py  train_nemo_fixed.py  train_stable.py  train_transducer.py  train_transducer_experimental.py
ctc-web-demo/: swipe-sota-demo.html
docs/: rnnt_scripts_verified.md  rnnt_setup_complete.md  training.md
examples/: vocab_integration_example.py
exports/: vocab.json
memory/: prompt1.md
scripts/: analyze_swipe_dataset.py  build_aligned_word_freq.py  export_and_decode.py  onnx_export.py  pte_export.py  split_data.py  swipe_data_utils.py  vocab_utils.py
trained_models/nema1/: BeamDecode.kt  (+33 more)
vocab/: check_words.py  combine_wordlists.py  simple_lm.arpa
web-demo/: ARCHITECTURE.md  README.md  architecture_diagram.js  architecture_view.html  index.html  lexicon_beam_web.ts  runtime_meta.json  swipe-onnx.html  swipe-sota-demo.html  test-debug.html  todo.pm  vocab-meta-utils.js  word_frequencies_aligned.json  words.txt
(+21 files in other folders)
